--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -1,32 +1,43 @@
 <header class="sticky-top">
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="{{ path('app_home') }}">
-        Panterest
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('app_home') }}">
+                Panterest
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
-          {% if app.user %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_pins_create') }}">New pin</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-            </li>
-          {% else %}
-              <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_register') }}">Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-            </li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </nav>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_pins_create') }}">
+                                New pin
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="event.preventDefault(); document.getElementById('js-logout-form').submit();">
+                                Logout
+                            </a>
+                            <form id="js-logout-form" class="d-none" action="{{ path('app_logout') }}" method="POST">
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('logout')}}" />
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_register') }}">
+                                Account
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_login') }}">
+                                Login
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
